--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
           <a href="index.html" id="active">Home</a>
           <a href="about.html">About</a>
           <a href="speakers.html">Speakers</a>
+          <a href='https://lu.ma/l8suhfxp'
+          class="mobile-register-btn"
+          style="
+          background-color: var(--primary-color2);
+        padding: 15px;
+        border: none;
+        color: white;
+        font-weight: bold;
+        width: 75%;
+        cursor: pointer;
+        font-size: 15px;
+        text-align: center;
+        "
+          >Register</a>
         </nav>
         <button class="button" onclick="window.location.href='https://lu.ma/l8suhfxp'">Register Now</button>
     </div>
@@ -215,7 +229,7 @@
   </section>
 
   <section style="margin:10% 4% 1% 4%">
-  <h1 class="fade-in" style="font-size: 50px;">What We'll Talk About</h1>
+  <h1 class="fade-in" style="font-size: 40px;">What We'll Talk About</h1>
   <div style="margin-top: 7%; display: flex; justify-content: space-between; flex-wrap: wrap; align-items: stretch; gap: 20px;">
     <div style="background-color: #044475; flex: 1; padding: 5px 15px 13px 15px; border-bottom: 2px solid whitesmoke;">
       <img />
@@ -326,129 +340,90 @@
     <div
       class="fade-in"
      style="
-        display: flex;
-        flex-wrap: wrap; /* Allows items to wrap to the next row */
-        gap: 20px; /* Add spacing between items */
-        width: 100%; /* Important for responsiveness */
-        margin-top: 6%; /* Example spacing, adjust as needed */">
+        display: flex; justify-content: space-between; flex-wrap: wrap; align-items: stretch; gap: 20px;
+        ">
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
         border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
         ">Tech Enthusiast
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
         border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
         ">Marketers
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
         border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
         ">Entrepreneurs
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
         border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
         ">Start Ups
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
-        border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
+        border-bottom: 2px solid var(--primary-color2); 
         ">Brand Designers
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
-        border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
+        border-bottom: 2px solid var(--primary-color2); 
         ">Digital Marketers
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
-        border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
+        border-bottom: 2px solid var(--primary-color2);  
         ">Innovators
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
         border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
         ">Educators
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
-        border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
+        border-bottom: 2px solid var(--primary-color2); 
         ">Media Agencies
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
-        border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
+        border-bottom: 2px solid var(--primary-color2); 
         ">Business Developers
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
         border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
         ">Analyst
       </div>
       <div style="
-        flex-basis: calc(25% - 20px); /* Adjust width for spacing; minus gap */
-        max-width: calc(25% - 20px);
-        background-color: #044475;
-        padding: 15px 40px;
+        background-color: #044475; 
+        flex: 1; 
+        padding: 5px 15px 13px 15px; 
         border-bottom: 2px solid var(--primary-color2);
-        box-sizing: border-box; /* Important for accurate width calculation */
-        height: auto; 
         ">Tech Lovers
       </div>
     </div>
@@ -469,7 +444,7 @@
       <h1 class="fade-in change-cover-text">
         Don't Miss Out <br /> - Join Africa's <br /> Boldest Brands
       </h1>
-      <button class="fade-in change-cover-btn" <button class="button" onclick="window.location.href='https://lu.ma/l8suhfxp'">Register Now</button>
+      <button class="fade-in change-cover-btn" onclick="window.location.href='https://lu.ma/l8suhfxp'">Register Now</button>
     </div>
   </section>
 
