--- a/speakers.html
+++ b/speakers.html
@@ -47,9 +47,23 @@
 
         <!-- Navigation links -->
         <nav id="mobileMenu" class="navlinks">
-          <a href="index.html" id="active">Home</a>
+          <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="speakers.html">Speakers</a>
+          <a href='https://lu.ma/l8suhfxp'
+          class="mobile-register-btn"
+          style="
+          background-color: var(--primary-color2);
+        padding: 15px;
+        border: none;
+        color: white;
+        font-weight: bold;
+        width: 75%;
+        cursor: pointer;
+        font-size: 15px;
+        text-align: center;
+        "
+          >Register</a>
         </nav>
         <button class="button">Register Now</button>
     </div>
@@ -221,6 +235,24 @@ faders.forEach(fader => {
             mobileMenu.classList.toggle('show');
             });
         });
+
+
+        document.addEventListener('DOMContentLoaded', () => {
+    const links = document.querySelectorAll('.navlinks a');
+
+    // Get current path, e.g., /index.html
+    const currentPath = window.location.pathname;
+
+    // Loop through links to find the one matching current URL
+    links.forEach(link => {
+      const linkPath = new URL(link.href).pathname;
+
+      // Check if link's pathname matches current path
+      if (linkPath === currentPath) {
+        link.classList.add('active');
+      }
+    });
+  });
 </script>
 
 </body>
